<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="app_name">BookDrop</string>
    <string name="service_error">Ops! There have been a problem, please try again later</string>
    <string name="progress_text">Please, wait a moment</string>
    <string name="account_error">Error : there isn\'t any Dropbox account linked</string>
    <string name="unauthorized_error">You are not authorized to access folder content</string>

    <!-- Sign in -->
    <string name="sign">Sign in</string>
    <string name="sign_text">You are not logged into any Dropbox account</string>

    <!-- Menu -->
    <string name="action_date_sort">Date sort</string>
    <string name="action_title_sort">Title sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign out</string>
    
    <!-- Book list -->
    <string name="empty_list">No eBooks found at Applications/BookDrop/ebooks/</string>
    <string name="img_content_description">Book thumbnail</string>
    
    <!-- Book detail -->
    <string name="title_content_description">Title</string>
    <string name="author_content_description">Author</string>

    <!-- About -->
    <string name="about_label">About</string>
    <string name="about">This app reads eBooks from user\'s Dropbox account and shows it. \neBooks must be placed at Applications/BookDrop/ebooks/ folder \n\n\n\n Author: Victor de Francisco Domingo (victor_defran@yahoo.es)</string>
    
</resources>
