<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh"/>
    
    <item
        android:id="@+id/action_date_sort"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_date_sort">
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_sign_out" />

</menu>
