<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        
        <TextView
	        android:id="@+id/lbl_title"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_gravity="center_vertical"
	        android:ellipsize="end"
	        android:singleLine="true"
	        android:textStyle="bold"
	        android:contentDescription="@string/title_content_description">
   	 	</TextView>
    
	    <TextView
	        android:id="@+id/lbl_author"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_gravity="center_vertical"
	        android:ellipsize="marquee"
	        android:singleLine="true"
	        android:textStyle="bold"
	        android:contentDescription="@string/author_content_description">
	    </TextView>
        
    </LinearLayout>
    
    <ImageView
        android:id="@+id/img_book_cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:contentDescription="@string/img_content_description">
    </ImageView>
    

</LinearLayout>
